* Fri Jan 25 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.8.0-0
- Fixed issues with incron rules and the simp_generate_types calls.
  - This was mostly due to bugs in the newer version of incrond. However, this
    module is now extensively tested for safety but will only trigger type
    generation on environment creation or updates to the puppet binaries.
- Fix bug where some SSL settings could not be set for the puppet server
  `webserver` components.
- Added the following *advanced usage* parameters in case users need to set
  parameters that are not presently managed to work around future issues:
  - pupmod::master::server_webserver_options
  - pupmod::master::ca_webserver_options

* Tue Jan 22 2019 Brandon Riden <brandon.riden@onyxpoint.com> - 7.7.1-0
- Set pupmod::master::generate_types: enable => false by default to fix
  bug causing puppet servers to crash.
  - pupmod::master::extra_webserver_sections

* Thu Nov 15 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.7.0-0
- Fix warning about automatic data type munging in the puppet server sysconfig
  template
- Add workaround for Puppet 5 background exec issue to the generate_types exec

* Mon Oct 29 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.7.0-0
- Remove deprecated `[master] ca` setting when `ca = true` in Puppet 5.5.6+
- Remove `[master] ca` setting in Puppet 6+
- Update badges and contribution guide URL in README.md

* Mon Oct 15 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.7.0-0
- Add `ensure` parameter to `pupmod::conf``
- Ensure that `trusted_server_facts` is removed for Puppet 5.+ (PUP-6112)

* Tue Sep 11 2018 Steven Pritchard <steven.pritchard@onyxpoint.com> - 7.7.0-0
- Unconditionally manages the puppet service
- Remove the (apparently) broken status logic on the puppet service

* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.7.0-0
- Update Hiera 4 to Hiera 5

* Thu Jul 19 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 7.6.1-0